<?xml version="1.0"?>
<package format="3">
  <name>wallbot_urdf</name>
  <version>0.0.1</version>
  <description>Attempt 17234 of getting this sim working</description>

  <maintainer email="cajwilliams@gmail.com">C Williams</maintainer>
  <author email="cajwilliams13@gmail.com">C Williams</author>

  <license>BSD-3-Clause</license>

  <!-- ROS 2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
