[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-gui"
version = "0.1.0"
description = "Nav2 mission GUI"
requires-python = ">=3.10"
# Do NOT list ROS/Apt packages like nav2_msgs here
dependencies = ["PySide6"]  # add pure-pip deps only

[project.scripts]
plant-gui = "plant_gui.app:main"

[tool.setuptools.packages.find]
where = ["."]

